--- a/package.json
+++ b/package.json
@@ -7,25 +7,19 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "vite",
-    "dev:backend": "nodemon server/server.js",
+    "dev": "vite",
     "build": "vite build",
-    "start": "npm run build && node server/server.js",
-    "start:prod": "NODE_ENV=production node server/server.js",
+    "start": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "railway": "npm run build && cross-env NODE_ENV=production node server/server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "3.10.0",
-    "cors": "^2.8.5",
+    "aws-amplify": "^6.15.8",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
     "framer-motion": "11.18.2",
     "lucide-react": "0.476.0",
-    "nodemailer": "^7.0.3",
     "prop-types": "15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -38,23 +32,29 @@
     "swiper": "11.2.4"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.18.0",
+    "@aws-amplify/backend-cli": "^1.8.0",
     "@eslint/core": "0.9.1",
     "@eslint/js": "9.21.0",
-    "@types/nodemailer": "^6.4.17",
+    "@types/aws-lambda": "^8.10.159",
+    "@types/nodemailer": "^6.4.21",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "10.4.20",
-    "concurrently": "^9.2.0",
+    "aws-cdk-lib": "^2.216.0",
+    "constructs": "^10.4.3",
+    "esbuild": "^0.27.0",
     "eslint": "9.21.0",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "15.15.0",
     "husky": "9.1.7",
-    "nodemon": "^3.1.10",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
     "vite": "5.4.14"
   }
 }
