--- a/amplify/functions/contact/package.json
+++ b/amplify/functions/contact/package.json
@@ -4,5 +4,11 @@
     "type": "module",
     "dependencies": {
         "nodemailer": "^6.9.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.0.0",
+        "@types/aws-lambda": "^8.10.159",
+        "@types/nodemailer": "^6.4.21",
+        "@aws-amplify/backend": "^1.18.0"
     }
 }
