--- a/amplify/tsconfig.json
+++ b/amplify/tsconfig.json
@@ -8,6 +8,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "types": [
+      "node"
+    ],
     "paths": {
       "$amplify/*": [
         "../.amplify/generated/*"
