--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@eslint/core": "0.9.1",
     "@eslint/js": "9.21.0",
     "@types/aws-lambda": "^8.10.159",
+    "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.21",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
