--- a/amplify/package.json
+++ b/amplify/package.json
@@ -1,3 +1,9 @@
 {
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/aws-lambda": "^8.10.159",
+    "@types/nodemailer": "^6.4.21",
+    "@aws-amplify/backend": "^1.18.0"
+  }
 }
