--- a/amplify/tsconfig.json
+++ b/amplify/tsconfig.json
@@ -2,13 +2,20 @@
   "compilerOptions": {
     "target": "es2022",
     "module": "es2022",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "baseUrl": ".",
     "paths": {
+      "@aws-amplify/backend": [
+        "../node_modules/@aws-amplify/backend"
+      ],
+      "@aws-amplify/backend/*": [
+        "../node_modules/@aws-amplify/backend/*"
+      ],
       "$amplify/*": [
         "../.amplify/generated/*"
       ]
