--- a/amplify/functions/contact/tsconfig.json
+++ b/amplify/functions/contact/tsconfig.json
@@ -1,15 +1,3 @@
 {
-    "extends": "../../tsconfig.json",
-    "compilerOptions": {
-        "moduleResolution": "node",
-        "baseUrl": ".",
-        "paths": {
-            "@aws-amplify/backend": [
-                "../../../node_modules/@aws-amplify/backend"
-            ],
-            "@aws-amplify/backend/*": [
-                "../../../node_modules/@aws-amplify/backend/*"
-            ]
-        }
-    }
+    "extends": "../../tsconfig.json"
 }
